--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Long Lor</title>
+    <title>Chat App</title>
     <link type="text/css" src="./styles.css" />
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="jquery.js"></script>
   </head>
   <body>
     <div class="container clearfix">
