--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,26 +6,25 @@
     <title>Register</title>
     <script src="jquery.js"></script>
     <script src="socket.io/socket.io.js"></script>
-    <script src="controllerFE.js"></script>
+    <script src="./controllerFE.js"></script>
   </head>
-  <body>
+  <body style="background-color: gray">
     <div>
       <div><H3>Register form</H3></div>
-
       <div>
-        <h5>username:</h5>
+        <h5>username(*):</h5>
         <input id="username" type="text" />
       </div>
       <div>
-        <h5>password:</h5>
+        <h5>password(*):</h5>
         <input type="password" id="password" type="text" />
       </div>
       <div>
-        <h5>confirm password:</h5>
+        <h5>confirm password(*):</h5>
         <input type="password" id="confirmPassword" type="text" />
       </div>
       <div>
-        <h5>name:</h5>
+        <h5>name(*):</h5>
         <input id="name" type="text" />
       </div>
       <div>
