sai het roi =))). ngu

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,7 @@
     <title>Login</title>
     <script src="jquery.js"></script>
     <script src="socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./controllerFE.js"></script>
   </head>
   <body style="background-color: gray">
