ket phan passport o FE

--- a/views/indextemp.ejs
+++ b/views/indextemp.ejs
@@ -7,6 +7,7 @@
     <script src="jquery.js"></script>
     <script src="socket.io/socket.io.js"></script>
     <script src="controllerFE.js"></script>
+    <script src="reqToken.js"></script>
   </head>
   <body>
     <h2 id="noiDung"></h2>
