--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,8 @@
     <script src="jquery.js"></script>
     <script src="socket.io/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./controllerFE.js"></script>
+    <script src="./controllerLogin.js"></script>
+    <script src="./reqToken.js"></script>
   </head>
   <body style="background-color: gray">
     <div>
