--- a/FE/views/login.html
+++ b/FE/views/login.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <script src="jquery.js"></script>
-    <script src="socket.io/socket.io.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./controllerLogin.js"></script>
+    <script src="../public/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+    <script src="../public/controllerFE.js"></script>
+    <script src="../public/controllerLogin.js"></script>
     <!-- <script src="./reqToken.js"></script> -->
   </head>
   <body style="background-color: gray">
