--- a/FE/views/register.html
+++ b/FE/views/register.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <script src="jquery.js"></script>
-    <script src="socket.io/socket.io.js"></script>
-    <script src="./controllerFE.js"></script>
+    <script src="../public/jquery.js" type="text/javascript"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js"
+      type="text/javascript"
+    ></script>
+    <script src="../public/controllerFE.js" type="text/javascript"></script>
   </head>
   <body style="background-color: gray">
     <div>
-      <div><H3>Register form</H3></div>
+      <div><h3>Register form</h3></div>
       <div>
         <h5>username(*):</h5>
         <input id="username" type="text" />
