--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home page</title>
-    <script src="jquery.js"></script>
-    <script src="socket.io/socket.io.js"></script>
-    <script src="controllerFE.js"></script>
+    <script src="../public/jquery.js"></script>
+    <!-- <script src="socket.io/socket.io.js"></script> -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.3/socket.io.js"
+      integrity="sha512-jDUVpk2awjMnyrpY2xZguylQVRDeS9kRBImn0M3NJaZzowzUpKr6i62ynwPG0vNS1+NsTk4ji+iznbc5m0ZCKQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="../public/controllerFE.js" type="text/javascript"></script>
+    <script src="../public/controllerLogin.js" type="text/javascript"></script>
   </head>
   <body>
     <h2 id="noiDung"></h2>
