--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -5,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home page</title>
     <script src="../public/jquery.js"></script>
-    <!-- <script src="socket.io/socket.io.js"></script> -->
-    <script
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js"></script>
+    <!-- <script
       src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.3/socket.io.js"
       integrity="sha512-jDUVpk2awjMnyrpY2xZguylQVRDeS9kRBImn0M3NJaZzowzUpKr6i62ynwPG0vNS1+NsTk4ji+iznbc5m0ZCKQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script>
+    ></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js"></script>
     <script src="../public/controllerFE.js" type="text/javascript"></script>
-    <script src="../public/controllerLogin.js" type="text/javascript"></script>
+    <!-- <script src="../public/controllerLogin.js" type="text/javascript"></script> -->
+    <script src="../public/controllerIndex.js" type="text/javascript"></script>
   </head>
   <body>
+    <h5 id="username"></h5>
     <h2 id="noiDung"></h2>
     <input id="boxChat" type="text" />
     <button id="buttonSend">Send</button>
-    <script src="reqToken.js"></script>
   </body>
 </html>
