--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -6,20 +6,24 @@
     <title>Home page</title>
     <script src="../public/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js"></script>
-    <!-- <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.3/socket.io.js"
-      integrity="sha512-jDUVpk2awjMnyrpY2xZguylQVRDeS9kRBImn0M3NJaZzowzUpKr6i62ynwPG0vNS1+NsTk4ji+iznbc5m0ZCKQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js"></script>
     <script src="../public/controllerFE.js" type="text/javascript"></script>
     <!-- <script src="../public/controllerLogin.js" type="text/javascript"></script> -->
     <script src="../public/controllerIndex.js" type="text/javascript"></script>
+    <!-- <link rel="stylesheet" href="./public/css/styleIndex.css" /> -->
+    <style>
+      h2 {
+        font-size: 40px;
+      }
+
+      #noiDung {
+        max-height: 50px;
+        overflow-y: scroll;
+      }
+    </style>
   </head>
   <body>
     <h5 id="username"></h5>
-    <h2 id="noiDung"></h2>
+    <h4 id="noiDung"></h4>
     <input id="boxChat" type="text" />
     <button id="buttonSend">Send</button>
   </body>
