--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -7,7 +7,7 @@
     <script src="../public/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js"></script>
     <script src="../public/controllerFE.js" type="text/javascript"></script>
-    <!-- <script src="../public/controllerLogin.js" type="text/javascript"></script> -->
+    <script src="../public/controllerUpload.js" type="text/javascript"></script>
     <script src="../public/controllerIndex.js" type="text/javascript"></script>
     <!-- <link rel="stylesheet" href="./public/css/styleIndex.css" /> -->
     <style>
@@ -28,6 +28,7 @@
     <button id="buttonSend" style="margin-bottom: 10px">Send</button>
     <div>
       <form
+        id="uploadForm"
         action="http://localhost:3000/upload_file"
         method="post"
         enctype="multipart/form-data"
