--- a/FE/views/register.html
+++ b/FE/views/register.html
@@ -30,10 +30,10 @@
         <h5>name(*):</h5>
         <input id="name" type="text" />
       </div>
-      <div>
+      <!-- <div>
         <h5>nickname:</h5>
         <input id="nickname" type="text" />
-      </div>
+      </div> -->
       <div style="margin: 30px">
         <button id="buttonRegister">Register</button>
       </div>
