load tin nhan hoan thanh

--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -47,10 +47,8 @@
       <div>
         <div>User online</div>
         <div>
-          <ul>
+          <ul id="userList">
             <li id="listUserOnline"></li>
-            <li>user2</li>
-            <li>user3</li>
           </ul>
         </div>
       </div>
