--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -44,12 +44,31 @@
           </form>
         </div>
       </div>
-      <div>
-        <div>User online</div>
+      <div id="listUser">
         <div>
-          <ul id="userList">
-            <li id="listUserOnline"></li>
-          </ul>
+          <div>Friend</div>
+          <div>
+            <ul id="friendList">
+              <li id="allUser"></li>
+            </ul>
+          </div>
+        </div>
+
+        <div>
+          <div>User online</div>
+          <div>
+            <ul id="userList">
+              <li id="listUserOnline"></li>
+            </ul>
+          </div>
+        </div>
+        <div>
+          <div>All user</div>
+          <div>
+            <ul id="allUserList">
+              <li id="allUser"></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
