lam lai chat room

--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -44,30 +44,43 @@
           </form>
         </div>
       </div>
-      <div id="listUser">
-        <div>
-          <div>Friend</div>
-          <div>
-            <ul id="friendList">
-              <li id="allUser"></li>
-            </ul>
+      <div>
+        <div id="listUser">
+          <div class="user">
+            <div>Friend</div>
+            <div>
+              <ul id="friendList">
+                <li id="allUser"></li>
+              </ul>
+            </div>
           </div>
-        </div>
+          <div class="user">
+            <div>User online</div>
+            <div>
+              <ul id="userList">
+                <li id="listUserOnline"></li>
+              </ul>
+            </div>
+          </div>
+          <div class="user">
+            <div>All user</div>
+            <div>
+              <ul id="allUserList">
+                <li id="allUser"></li>
+              </ul>
+            </div>
+          </div>
+          <div id="listRoom">
+            <div id="topRoom">
+              <div>Room active</div>
+              <div id="roomJoing">zzz</div>
+            </div>
 
-        <div>
-          <div>User online</div>
-          <div>
-            <ul id="userList">
-              <li id="listUserOnline"></li>
-            </ul>
-          </div>
-        </div>
-        <div>
-          <div>All user</div>
-          <div>
-            <ul id="allUserList">
-              <li id="allUser"></li>
-            </ul>
+            <div id="roomAlready"></div>
+            <div id="botRoom">
+              <input id="roomName" type="text" />
+              <button id="createRoomButton">Cre.Room</button>
+            </div>
           </div>
         </div>
       </div>
