--- a/FE/public/css/styleIndex.css
+++ b/FE/public/css/styleIndex.css
@@ -25,3 +25,17 @@
 ul {
   list-style-type: decimal;
 }
+#listUser .user {
+  border: 1px solid #000;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+#listRoom {
+  border: 1px solid #000;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+#topRoom {
+  display: flex;
+  justify-content: space-around;
+}
