--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -73,10 +73,10 @@
           <div id="listRoom">
             <div id="topRoom">
               <div>Room active</div>
-              <div id="roomJoing">zzz</div>
+              <div id="roomJoing">Not in room</div>
             </div>
-
             <div id="roomAlready"></div>
+
             <div id="botRoom">
               <input id="roomName" type="text" />
               <button id="createRoomButton">Cre.Room</button>
