--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -27,8 +27,7 @@
     <div id="coverBox">
       <div id="boxChatMain">
         <h5 id="username"></h5>
-
-        <h4 id="noiDung"></h4>
+        <div id="boxNoiDung"><h4 id="noiDung"></h4></div>
 
         <input id="boxChat" type="text" />
         <button id="buttonSend" style="margin-bottom: 10px">Send</button>
