fix load friend FE

--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -46,18 +46,18 @@
       <div>
         <div id="listUser">
           <div class="user">
-            <div>Friend</div>
+            <div>Friend online</div>
             <div>
-              <ul id="friendList">
-                <li id="allUser"></li>
+              <ul id="userList">
+                <li id="listUserOnline"></li>
               </ul>
             </div>
           </div>
           <div class="user">
-            <div>User online</div>
+            <div>Friend</div>
             <div>
-              <ul id="userList">
-                <li id="listUserOnline"></li>
+              <ul id="friendList">
+                <li id="allUser"></li>
               </ul>
             </div>
           </div>
