xong phan them ban

--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -84,6 +84,7 @@
         </div>
       </div>
     </div>
+    <div id="notification">Notification</div>
     <div><button id="logout" style="margin: 20px">LOGOUT</button></div>
   </body>
 </html>
