--- a/FE/views/indextemp.html
+++ b/FE/views/indextemp.html
@@ -46,15 +46,15 @@
       <div>
         <div id="listUser">
           <div class="user">
-            <div>Friend online</div>
+            <div class="titleUser">Friend online</div>
             <div>
-              <ul id="userList">
-                <li id="listUserOnline"></li>
+              <ul id="friendOnl">
+                <li id="listFriendOnline"></li>
               </ul>
             </div>
           </div>
           <div class="user">
-            <div>Friend</div>
+            <div class="titleUser">Friend</div>
             <div>
               <ul id="friendList">
                 <li id="allUser"></li>
@@ -62,7 +62,15 @@
             </div>
           </div>
           <div class="user">
-            <div>All user</div>
+            <div class="titleUser">User online</div>
+            <div>
+              <ul id="userList">
+                <li id="listUserOnline"></li>
+              </ul>
+            </div>
+          </div>
+          <div class="user">
+            <div class="titleUser">All user</div>
             <div>
               <ul id="allUserList">
                 <li id="allUser"></li>
